fix sparkline overflow text

--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,8 @@ code {
 * {
   outline: none !important;
 }
+
+
+.ws-react-charts-sparkline-overflow svg {
+  overflow: visible;
+}
